# voice-korea

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: dev-workflow.yml  pr-workflow.yml  prod-workflow.yaml
package/api/: Cargo.toml
package/api/src/: config.rs  main.rs
package/api/src/controllers/: mod.rs
package/api/src/controllers/attributes/v1/: mod.rs
package/api/src/controllers/auth/v1/: mod.rs
package/api/src/controllers/groups/v1/: mod.rs
package/api/src/controllers/m1/: mod.rs
package/api/src/controllers/m1/survey/: mod.rs
package/api/src/controllers/members/v1/: mod.rs
package/api/src/controllers/metadatas/v1/: mod.rs
package/api/src/controllers/organizations/v1/: mod.rs
package/api/src/controllers/panels/v1/: mod.rs
package/api/src/controllers/public_surveys/v1/: mod.rs
package/api/src/controllers/search/v1/: mod.rs
package/api/src/controllers/survey/m1/: mod.rs
package/api/src/controllers/survey/v1/: mod.rs
package/api/src/controllers/v1/: mod.rs
package/api/src/controllers/v1/attributes/: mod.rs
package/api/src/controllers/v1/auth/: mod.rs
package/api/src/controllers/v1/groups/: mod.rs
package/api/src/controllers/v1/members/: mod.rs
package/api/src/controllers/v1/metadatas/: mod.rs
package/api/src/controllers/v1/public_surveys/: mod.rs
package/api/src/controllers/v1/search/: mod.rs
package/api/src/controllers/verification/: mod.rs
package/api/src/middleware/auth/: mod.rs
package/api/src/utils/jwt/: mod.rs
package/api/src/utils/nonce_lab/: mod.rs  models.rs
package/models/: Cargo.toml
package/models/src/: error.rs  lib.rs
package/models/src/attribute/: mod.rs
package/models/src/auth/: mod.rs
package/models/src/field/: mod.rs
package/models/src/group/: mod.rs
package/models/src/member/: mod.rs
package/models/src/metadata/: mod.rs
package/models/src/organization/: mod.rs
package/models/src/pagination/: mod.rs
package/models/src/panel/: mod.rs
package/models/src/public_opinion/: mod.rs
package/models/src/public_survey/: mod.rs
package/models/src/search/: mod.rs
package/models/src/strings/: mod.rs
package/models/src/survey/: mod.rs
package/models/src/user/: mod.rs
platform/: Cargo.toml  Makefile
platform/src/: lib.rs  main.rs  routes.rs
platform/src/components/icons/: mod.rs
platform/src/layouts/root_layout/: mod.rs  side_bar.rs
platform/src/pages/create/: controller.rs  step_four.rs  step_one.rs  step_three.rs
platform/src/pages/groups/: controller.rs  i18n.rs  page.rs
platform/src/pages/groups/_id/: controller.rs  i18n.rs  page.rs
platform/src/pages/id/select_response/: controller.rs
platform/src/pages/id/survey_summary/: controller.rs
platform/src/pages/id/write_question/: mod.rs
platform/src/pages/members/: controller.rs  i18n.rs  page.rs
platform/src/pages/members/_id/: controller.rs  i18n.rs  page.rs
platform/src/pages/opinions/: page.rs
platform/src/pages/opinions/new/: composition_panel.rs  controller.rs  i18n.rs  page.rs  preview.rs
platform/src/pages/panels/: controller.rs  i18n.rs  page.rs
platform/src/pages/reset_password/: controller.rs
platform/src/pages/resources/: controller.rs  i18n.rs  page.rs
platform/src/pages/surveys/: controller.rs  i18n.rs  mod.rs  page.rs
platform/src/pages/surveys/components/: introduction.rs  survey.rs  type_selection.rs
platform/src/pages/surveys/new/: controller.rs  i18n.rs  page.rs
platform/src/service/: attribute_api.rs  group_api.rs  login_service.rs  member_api.rs  metadata_api.rs  opinion_api.rs  organization_api.rs  panel_api.rs  prev_survey_api.rs  theme.rs  user_api.rs
platform/src/utils/: api.rs
(+11 files in other folders)
