[workspace]
members = ["package/models", "package/api", "platform", "package/watcher"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Biyard"]
description = "iitp"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
models = { version = "1.0.0", path = "package/models" }
easy-dynamodb = "0.1.7"
slog = "2.7.0"
by-axum = { version = "0.2.5" }
chrono = "0.4.38"
serde = "1.0.215"
reqwest = "0.12.9"
by-macros = { version = "0.5.0" }
by-components = { path = "./deps/rust-sdk/packages/by-components" }
dioxus = { version = "0.6.*" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
