[workspace]
members = ["package/models", "package/api", "platform", "package/watcher"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Biyard"]
description = "iitp"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
models = { version = "1.0.0", path = "package/models" }
easy-dynamodb = "0.1.7"
slog = "2.7.0"
by-axum = { version = "0.2.5" }
chrono = "0.4.38"
serde = "1.0.215"
reqwest = "0.12.9"
by-components = { path = "./deps/rust-sdk/packages/by-components" }
dioxus = { version = "0.6.*" }

by-macros = { version = "0.6.7" }
by-types = { version = "0.3.5" }
sqlx = { version = "0.8.3", features = [
    "sqlite",
    "postgres",
    "runtime-tokio",
    "time",
    "bigdecimal",
] }


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
