[package]
name = "models"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
dioxus-translate = { version = "0.1.0", features = ["ko"] }
by-axum = { workspace = true, optional = true }
by-macros = { workspace = true, optional = true }
schemars = "0.8.21"
thiserror = "2.0.11"
serde_json = "1.0.137"
uuid = { version = "1.12.1", features = ["v4"] }
sqlx = { workspace = true, optional = true }
serde_urlencoded = "0.7.1"

[features]
web = ["web-only"]
web-only = ["dioxus-translate/web"]
server = ["by-axum", "by-macros/server"]
